<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <TextView
        android:id="@+id/health_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/player_settings_health_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/health_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="3"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/shots_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_reload_shots"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/reload_shots_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="3"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/reload_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_reload_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/reload_time_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="5"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    </EditText>

    <Switch
        android:id="@+id/reload_on_empty_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/player_settings_reload_on_empty" />

    <TextView
        android:id="@+id/spawn_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_spawn_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/spawn_time_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="3"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/damage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_damage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/damage_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="3"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    </EditText>

    <Switch
        android:id="@+id/override_lives_limit_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/player_settings_override_lives" />

    <TextView
        android:id="@+id/lives_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_lives"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/lives_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:maxLength="3"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="number" >
    </EditText>

    <Button
        android:id="@+id/reset_defaults_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_reset" />

    <Switch
        android:id="@+id/apply_to_all_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_settings_apply_to_all" />

    <Switch
        android:id="@+id/allow_player_settings_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/player_settings_allow_player_settings" />

</LinearLayout>